pipeline configuration implemented